fix mixed content err

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta content="utf-8" http-equiv="encoding">
     <title>Commit Bubbles</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
-    <script src="http://underscorejs.org/underscore-min.js"></script>
-    <script src="http://vitalets.github.io/checklist-model/checklist-model.js"></script>
-    <script src="http://momentjs.com/downloads/moment.min.js"></script>
+    <script src="https://underscorejs.org/underscore-min.js"></script>
+    <script src="https://vitalets.github.io/checklist-model/checklist-model.js"></script>
+    <script src="https://momentjs.com/downloads/moment.min.js"></script>
     <script>
         var app = angular.module("app", ["checklist-model"]);
         app.controller('CommitBubbles', function ($scope) {
